feature: added update API (for isStarred/isPromoted), todo: add update of salary and name
